--- a/config/database.yml
+++ b/config/database.yml
@@ -7,3 +7,10 @@ development:
   username: postgres
   password: root
 
+test:
+  adapter: postgresql
+  encoding: unicode
+  database: myrestaurant_test
+  pool: 5
+  username: postgres
+  password: root
