--- a/config/database.yml
+++ b/config/database.yml
@@ -9,7 +9,7 @@ development:
 production:
   adapter: postgresql
   encoding: unicode
-  database: myrestaurant
+  database: myrestaurant_prod
   pool: 5
   username: postgres
   password: root
